# Simulation_gazebo_ros

./: .gitignore  LICENSE  README.md
script/: gz.sh  rviz.sh  teleop.sh  test_mapping.sh
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/config/: control.yaml
src/robot_control/launch/: robot_control.launch
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/rviz/: rjp_robot_rviz.rviz  robot_in_rviz.rviz  tergeo.rviz
src/robot_description/urdf/: rviz_materials.xacro  t_robot.gazebo.xacro  t_robot.urdf.xacro  t_robot_args.xacro  t_robot_macros.xacro  tergeo.urdf.xacro
src/robot_description_deprecated/: CMakeLists.txt  package.xml
src/robot_description_deprecated/urdf/: t_robot.gazebo.xacro  t_robot_args.xacro  tergeo.urdf.xacro
src/robot_description_deprecated/urdf/parts/: sonar_model.xacro
src/robot_description_deprecated/urdf/parts_cfg/: base_world_cfg.xacro  imu_cfg.xacro  lidar_cfg.xacro  sonar_cfg.xacro  wheel_cfg.xacro
src/robot_gz/: CMakeLists.txt
src/robot_gz/launch/: show_in_gazebo.launch  show_in_rviz.launch  tb_show_in_gazebo.launch  tb_show_in_rviz.launch  tergeo_in_gazebo.launch  tergeo_in_rviz.launch
src/robot_gz_deprecated/: package.xml
src/robot_gz_deprecated/launch/: mm_gazebo.launch  mm_rviz.launch  show_turtlebot3.launch  tergeo_in_rviz.launch  test_mapping.launch
src/tb_modify_description/: CMakeLists.txt  package.xml
src/tergeo_description/: CMakeLists.txt  package.xml
src/tergeo_description/rviz/: tergeo.rviz
src/tergeo_gazebo/: CMakeLists.txt  package.xml
src/tergeo_teleop/: CMakeLists.txt  package.xml
(+48 files in other folders)
