<?xml version="1.0"?>
<package format="2">
  <name>robot_gz</name>
  <version>0.0.0</version>
  <description>The robot_gz package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rjp@rjp.com">rjp</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>



  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  

</package>
